--- a/frontend/src/components/Pages/AnimePage.css
+++ b/frontend/src/components/Pages/AnimePage.css
@@ -139,6 +139,12 @@
     margin-bottom: 2rem;
 }
 
+button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
 .trailer iframe {
     width: 100%;
     max-width: 720px;
